nambah gambar,css,html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <table id="myTable">
+        <th>Nama</th>
+        <th>Harga</th>
+        <th>Produk</th>
+        <th>Action</th>
+
+        <tr>
+            <td>Fitbar</td>
+            <td>2500</td>
+            <td><img src="/img/fitbar.jpg.dpg.webp" alt=""></td>
+            <td><button type="submit">add to cart</button></td>
+        </tr>
+        <tr>
+            <td>Oreo</td>
+            <td>4000</td>
+            <td><img src="/img/oreo.jpeg" alt="" width="128px" height="128px"></td>
+            <td><button type="submit">add to cart</button></td>
+        </tr>
+        <tr>
+            <td>Tao Kae Noi</td>
+            <td>2500</td>
+            <td><img src="/img/taoke.webp" alt="" width="128px" height="128px"></td>
+            <td><button type="submit">add to cart</button></td>
+        </tr>
+    </table>
 </body>
 </html>
